# Anki-Tango-master

./: .gitignore  LICENSE  README.md  generate.py  pyproject.toml  rearrange.py  requirements.txt
ja-word-card/: word_card.py
ja-word-card/output_formater/: anki_formatter.py  base.py  json_formatter.py
ja-word-card/query/: __init__.py  base.py  sqlite_query.py
ja_word_card/: __init__.py  __main__.py
ja_word_card/output_formater/: __init__.py  anki_formatter.py  base.py  json_formatter.py
ja_word_card/query/: __init__.py  openai_query.py  sqlite_query.py
